crates/components/tests/snapshots/components__gpu_cells_chart.snap
---
source: crates/components/tests/components.rs
expression: dump
---
[#cdd6f4/-/NONE]Device 0 [NVIDIA GeForce RTX 5090][#313244/-/NONE]                                                 [#a6adc8/-/NONE]PCIe GEN 5@16x RX: 34 MiB/s TX: 9 MiB/s
[#a6adc8/-/NONE]GPU [#cdd6f4/-/NONE]2796MHz[#a6adc8/-/NONE] MEM [#cdd6f4/-/NONE]14001MHz[#a6adc8/-/NONE] TEMP [#a6e3a1/-/NONE]44°C[#a6adc8/-/NONE] FAN [#cdd6f4/-/NONE]29%[#a6adc8/-/NONE] POW [#cdd6f4/-/NONE]379/600W[-/-/NONE]                                                                   
[#a6adc8/-/NONE]GPU[-/-/NONE] [#a6e2a0/-/NONE]█[#aae3a1/-/NONE]█[#aee3a2/-/NONE]█[#b7e3a3/-/NONE]█[#bbe3a4/-/NONE]█[#bfe3a4/-/NONE]█[#c3e3a5/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE]13%[-/-/NONE]  [#a6adc8/-/NONE]MEM[-/-/NONE] [#88b4f9/-/NONE]█[#8bb3f9/-/NONE]█[#8db3f9/-/NONE]█[#92b2f9/-/NONE]█[#95b2f9/-/NONE]█[#97b1f9/-/NONE]█[#99b1f9/-/NONE]█[#9cb0f9/-/NONE]█[#a0b0f9/-/NONE]█[#a2aff8/-/NONE]█[#a4aff8/-/NONE]█[#a6aef8/-/NONE]█[#abadf8/-/NONE]█[#adadf8/-/NONE]█[#afadf8/-/NONE]█[#b1acf8/-/NONE]█[#b3acf8/-/NONE]█[#b7abf8/-/NONE]█[#b9aaf7/-/NONE]█[#bbaaf7/-/NONE]█[#bda9f7/-/NONE]█[#bea9f7/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE]42%
[#a6adc8/-/NONE]ENC[-/-/NONE] [#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE]0%[-/-/NONE]  [#a6adc8/-/NONE]DEC[-/-/NONE] [#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE]0%
[#a6adc8/-/NONE]POW [#313244/-/NONE]20 ms[-/-/NONE]                                                                                                                 
[-/-/NONE]                                                                                                                          
[#f8c8ad/-/NONE]███[#f8c5ad/-/NONE]█████████████████[#f8c8ad/-/NONE]█████▇▇▇▇▇[#f8cbad/-/NONE]▇▇▇▇▇▇▇▇▇▇[#f8c8ad/-/NONE]████[#f8c5ad/-/NONE]█████████████████[#f8c8ad/-/NONE]████████[#f8cbad/-/NONE]▇▇[#f8c8ad/-/NONE]▇▇▇[#f8cbad/-/NONE]▇▇▇▇▇[#f8c8ad/-/NONE]█████████[#f8c5ad/-/NONE]█████████████[#f8c8ad/-/NONE]████[#f8cbad/-/NONE]▇▇▇▇▇▇▇▇▇▇▇▇▇[#f8c8ad/-/NONE]▇▇██
[#f8c8ad/-/NONE]███[#f8c5ad/-/NONE]█████████████████[#f8c8ad/-/NONE]██████████[#f8cbad/-/NONE]██████████[#f8c8ad/-/NONE]████[#f8c5ad/-/NONE]█████████████████[#f8c8ad/-/NONE]████████[#f8cbad/-/NONE]██[#f8c8ad/-/NONE]███[#f8cbad/-/NONE]█████[#f8c8ad/-/NONE]█████████[#f8c5ad/-/NONE]█████████████[#f8c8ad/-/NONE]████[#f8cbad/-/NONE]█████████████[#f8c8ad/-/NONE]████
[#a6adc8/-/NONE]1:util [#cdd6f4/-/NONE]14%[#313244/-/NONE]  [#a6adc8/-/NONE]2:vram [#cdd6f4/-/NONE]42%[#313244/-/NONE]  [#a6adc8/-/NONE]4:power [#cdd6f4/-/NONE]65%[#313244/-/NONE]  1m ⟶[-/-/NONE]                                                                                 
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[#313244/-/NONE]──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/-/NONE]   [#f8cbad/-/NONE]⠒⠒⠒[#f8c8ad/-/NONE]⠒⠒⠒⠒⠊⠉⠉⠑⠒⠒⠊⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉[#f8cbad/-/NONE]⠉⠑⠒⠒⠊⠉[#f8c8ad/-/NONE]⠉⠑⠒[#f8cbad/-/NONE]⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠢⠤⠤⠔⠒[#f9cdae/-/NONE]⠒⠒⠢⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤[#f9d0ae/-/NONE]⠤⠤⣀⣀⣀⠤[#f9cdae/-/NONE]⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤[#f8cbad/-/NONE]⠤⠤⠒⠒⠒⠤[#f9cdae/-/NONE]⠤⠤⠤⠤⠤⠒[#f8cbad/-/NONE]⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒[#f8c8ad/-/NONE]⠒⠒power
[-/-/NONE]                                                                                                                          
[#313244/-/NONE]───[#c2a8f7/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀vram
[-/-/NONE]                                                                                                                          
[#313244/-/NONE]──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/-/NONE]                                                                                                                          
[-/-/NONE]   [#cbe3a6/-/NONE]⠒⠊⠉⠉⠉⠉[#cfe3a7/-/NONE]⠉⠉⠉⠉⠉⠉[#cbe3a6/-/NONE]⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠑⠒⠒⠊⠉⠉⠉⠉⠉⠑⠒[#c7e3a6/-/NONE]⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒[#c3e3a5/-/NONE]⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒[#c7e3a6/-/NONE]⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠒⠒⠒⠉[#cbe3a6/-/NONE]⠉⠉⠉⠉⠉⠒⠒⠒⠉util
[-/-/NONE]                                                                                                                          
[#a6adc8/-/NONE]arch[-/-/NONE]    [#cdd6f4/-/NONE]Blackwell[-/-/NONE]        [#a6adc8/-/NONE]RT/tensor[-/-/NONE]  [#cdd6f4/-/NONE]170/680[-/-/NONE]       [#a6adc8/-/NONE]bandwidth[-/-/NONE]   [#cdd6f4/-/NONE]1792 GB/s[-/-/NONE]    [#a6adc8/-/NONE]launch[-/-/NONE] [#cdd6f4/-/NONE]2025-01-30[-/-/NONE]                              
[#a6adc8/-/NONE]cores[-/-/NONE]   [#cdd6f4/-/NONE]21760[-/-/NONE]            [#a6adc8/-/NONE]L2[-/-/NONE]         [#cdd6f4/-/NONE]96 MB[-/-/NONE]         [#a6adc8/-/NONE]TDP[-/-/NONE]         [#cdd6f4/-/NONE]575 W[-/-/NONE]        [#a6adc8/-/NONE]bus[-/-/NONE]    [#cdd6f4/-/NONE]512-bit[-/-/NONE]                                 
[#a6adc8/-/NONE]SMs[-/-/NONE]     [#cdd6f4/-/NONE]170[-/-/NONE]              [#a6adc8/-/NONE]base/boost[-/-/NONE] [#cdd6f4/-/NONE]2017/2407MHz[-/-/NONE]  [#a6adc8/-/NONE]die[-/-/NONE]         [#cdd6f4/-/NONE]750 mm²[-/-/NONE]      [#a6adc8/-/NONE]driver[-/-/NONE] [#cdd6f4/-/NONE]610.57.04[-/-/NONE]                               
[#a6adc8/-/NONE]TMU/ROP[-/-/NONE] [#cdd6f4/-/NONE]680/176[-/-/NONE]          [#a6adc8/-/NONE]memory[-/-/NONE]     [#cdd6f4/-/NONE]28 Gbps[-/-/NONE]       [#a6adc8/-/NONE]transistors[-/-/NONE] [#cdd6f4/-/NONE]92.2 B[-/-/NONE]       [#a6adc8/-/NONE]vbios[-/-/NONE]  [#cdd6f4/-/NONE]98.02.2E.80.05[-/-/NONE]                          
[#cdd6f4/-/REVERSED]    PID[-/-/NONE] [#cdd6f4/-/REVERSED]TYPE    [-/-/NONE] [#cdd6f4/-/REVERSED] GPU[-/-/NONE] [#cdd6f4/-/REVERSED]       GPU MEM▽   CPU[-/-/NONE] [#cdd6f4/-/REVERSED] HOST MEM[-/-/NONE] [#cdd6f4/-/REVERSED]Command                                 [-/-/NONE]                            
[#cdd6f4/-/NONE] 412345[-/-/NONE] [#cdd6f4/-/NONE]Both [#f9e2af/-/NONE]G[#cdd6f4/-/NONE]+[#cba6f7/-/NONE]C[-/-/NONE] [#cdd6f4/-/NONE] 17%[-/-/NONE] [#cdd6f4/-/NONE] 12879MiB  39%[-/-/NONE] [#cdd6f4/-/NONE]459.6%[-/-/NONE]   [#cdd6f4/-/NONE]12.5GiB[-/-/NONE] [#cdd6f4/-/NONE]/opt/game/bin/game --fullscreen --vulkan[-/-/NONE]                            
[#cdd6f4/-/NONE]   1701[-/-/NONE] [#f9e2af/-/NONE]Graphic[-/-/NONE]  [#cdd6f4/-/NONE]  2%[-/-/NONE] [#cdd6f4/-/NONE]   464MiB   1%[-/-/NONE] [#cdd6f4/-/NONE]  2.4%[-/-/NONE]    [#cdd6f4/-/NONE]393MiB[-/-/NONE] [#cdd6f4/-/NONE]/usr/bin/gnome-shell[-/-/NONE]                                                
[#cdd6f4/-/NONE]   6120[-/-/NONE] [#f9e2af/-/NONE]Graphic[-/-/NONE]  [#a6adc8/-/NONE]  0%[-/-/NONE] [#cdd6f4/-/NONE]   318MiB   1%[-/-/NONE] [#cdd6f4/-/NONE] 18.3%[-/-/NONE]    [#cdd6f4/-/NONE]961MiB[-/-/NONE] [#cdd6f4/-/NONE]/usr/lib/firefox/firefox[-/-/NONE]                                            
[#cdd6f4/-/NONE]  11805[-/-/NONE] [#cba6f7/-/NONE]Compute[-/-/NONE]  [#a6adc8/-/NONE]  0%[-/-/NONE] [#cdd6f4/-/NONE]    44MiB   0%[-/-/NONE] [#cdd6f4/-/NONE]  3.6%[-/-/NONE]   [#cdd6f4/-/NONE]97.6MiB[-/-/NONE] [#cdd6f4/-/NONE]/usr/bin/ptyxis --gapplication-service[-/-/NONE]                              
[#cdd6f4/-/NONE]   1842[-/-/NONE] [#f9e2af/-/NONE]Graphic[-/-/NONE]  [#a6adc8/-/NONE]  0%[-/-/NONE] [#cdd6f4/-/NONE]    12MiB   0%[-/-/NONE] [#cdd6f4/-/NONE]  0.9%[-/-/NONE]    [#cdd6f4/-/NONE]118MiB[-/-/NONE] [#cdd6f4/-/NONE]/usr/bin/pipewire[-/-/NONE]
